# stock-project

./: .env  .env_example  .gitignore  README.md  pyproject.toml  run.py
flaskr/: __init__.py  auth.py  config.py  db.py  index.py  schema.sql  security.py
flaskr/reports/: routes.py
flaskr/sales/: routes.py
flaskr/shopping/: routes.py
flaskr/static/: style.css
flaskr/stock/: routes.py
flaskr/templates/: base.html  index.html
flaskr/templates/auth/: forgot_password.html  login.html  register.html  reset_password.html
flaskr/templates/errors/: csrf.html
flaskr/templates/products/: base_products.html
flaskr/templates/reports/: index.html
flaskr/templates/sales/: carry.html  form.html  list.html  my_list.html
flaskr/templates/shopping/: form.html  list.html  my_list.html
flaskr/templates/stock/: consult.html  delete.html  form.html  list.html
flaskr/templates/users/: admin.html  manage.html  user.html
flaskr/users/: __init__.py  routes.py
flaskr/validate/: __init__.py  routes_reset.py  tokens.py
