[project]
name = "flaskr"
version = "1.0.0"
description = "Stock management app built with Flask."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "Flask>=2.3",
    "Flask-WTF>=1.2",
    "Flask-Mail>=0.9.1",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["flaskr"]
